Apply errorprone and nullaway
The main java on which Gradle is running is 25 (via Toolchains), therefore
compilation is done with options.release = 17 flag for compatiblity. It
no longer means that project is compiled with Java 17 - it's compiled
with Java 25, with bytecode compatibility with Java 17.